Bug 303506 - make xpcom nsDirectoryService assertions more meaningful, r=dougt,sr=shaver